# scikit-learn

./: .cirrus.star  .codecov.yml  .codespell_whitelist  .coverage.DESKTOP-KDNCI0N.13128.508304  .coverage.DESKTOP-KDNCI0N.16584.529869  .coverage.DESKTOP-KDNCI0N.19176.390615  .coverage.DESKTOP-KDNCI0N.24544.732689  .coverage.MBPm18C02WV02WJG5H.local.30801.852257  .coverage.MBPm18C02WV02WJG5H.local.31330.464559  .coverage.MBPm18C02WV02WJG5H.local.31331.247401  .coverage.dpys.34420.663223  .coverage.dpys.35595.118775  .coverage.dpys.35595.358078  .coverage.dpys.35821.730621  .coverage.dpys.35824.700906  .coverage.dpys.35843.873413  .coverage.dpys.35851.275027  .coverage.dpys.35860.126734  .coverage.dpys.35863.853676  .coverage.dpys.35864.625730  .coverage.dpys.35864.937400  .coverage.dpys.35867.931766  .coverage.dpys.35868.504978  .coverage.dpys.35871.773827  .coverage.dpys.35878.476571  .coverage.dpys.35879.389434  .coverage.dpys.35879.444043  .coverage.dpys.35882.557202  .coverage.dpys.35888.231875  .coverage.dpys.35893.617086  .coverage.dpys.35896.031071  .coverage.dpys.35897.145023  .coverage.dpys.35897.630221  .coverage.dpys.35908.337357  .coverage.dpys.35908.750412  .coverage.dpys.35909.434533  .coverage.dpys.35911.998163  .coverage.dpys.35912.271376  .coverage.dpys.35918.371814  .coverage.dpys.35919.564879  (+216 more)
sklearn/: .coverage.DESKTOP-55SHHO2.13704.021206  Algorithmic_Skew_Detection_deskewness_cropping_manual _receipt_Images.py  MultiOneVsRest.py  Untitled.ipynb  __init__.py  _all.py  _aode.pyx  _api_reference.py  _appdirs.py  _build_utils.py  _callbacks.py  _config.py  _display_estimator.py  _distributor_init.py  _engine.py  _hmmc.c  _hmmc.pyx  _hmmf.f90  _isotonic.c  _isotonic.pyx  _min_dependencies.py  _pprint.py  _temperature_scaling_test.py  aode.py  ball_tree.c  ball_tree.py  ball_tree.pyx  base.py  basic_checks.py  bench_sample_without_replacement.py  benchmark.py  boosting.py  bu3.py  calibration.py  calibration_temperature.py  checkmethod_new.py  conftest.py  cross_val.py  cross_validation.py  discriminant_analysis.py  (+55 more)
sklearn/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
sklearn/NIPALS/: NIPALS.py  __init__.py
sklearn/__check_build/: __init__.py  _check_build.c  _check_build.pyx  meson.build  setup.py
sklearn/_build_utils/: __init__.py  check_openmp.pyx  cythonize.py  dependencies.py  deprecated_modules.py  min_dependencies.py  openmp_helpers.py  pre_build_helpers.py  setup.py  tempita.py  vendor_vcomp140.py  version.py
sklearn/_engine/: __init__.py  base.py  testing.py
sklearn/_fast_gradient_boosting/: __init__.py  _binning.pyx  _gradient_boosting.pyx  _loss.pyx  binning.py  binning.pyx  gradient_boosting.py  grower.py  histogram.pxd  histogram.pyx  loss.py  loss.pyx  predictor.pyx  setup.py  splitting.pyx  types.pxd  types.pyx  utils.py  utils.pyx
sklearn/_loss/: __init__.py  _loss.pxd  _loss.pyx  _loss.pyx.tp  glm_distribution.py  link.py  loss.py  meson.build  setup.py
sklearn/_plot/: __init__.py  calibration_plot.py
sklearn/_vendored/: README.md  array_api_compat.pyi  bom.cdx.json  vendoring-requirements.txt
sklearn/additive/: __init__.py
sklearn/association/: __init__.py  _apriori.py
sklearn/bandits/: bandit.py  context_free_bandits.py
sklearn/bicluster/: __init__.py  spectral.py  util.py
sklearn/build_utils/: __init__.py  blas.py
sklearn/callback/: __init__.py  _base.py  _callback_context.py  _callback_support.py  _computation_tree.py  _convergence_monitor.py  _early_stopping.py  _metric_monitor.py  _mixin.py  _monitoring.py  _progressbar.py  _save_context_tree.py  _scoring_monitor.py  _snapshot.py  _task_tree.py  _text_verbose.py  _transport.py
sklearn/causal/: _causal_importance.py  _causal_importance_regression.py  utils.py
sklearn/cca/: __init__.py
sklearn/check_build/: __init__.py  _check_build.c  setup.py
sklearn/cluster/: Noptics.py  __init__.py  _affinity_propagation.py  _agglomerative.py  _bicluster.py  _birch.py  _bisect_k_means.py  _bisectingkmeans.py  _c_means.py  _cnn.py  _cnn_inner.pyx  _dbscan.py  _dbscan_inner.cpp  _dbscan_inner.pyx  _fcm.py  _feature_agglomeration.py  _gaussian_factors.c  _gaussian_factors.pyx  _graph_based.py  _hdbscan_linkage.c  _hdbscan_linkage.pyx  _hdbscan_tree.c  _hdbscan_tree.pyx  _hierarchical.c  _hierarchical.cpp  _hierarchical.py  _hierarchical.pyx  _hierarchical_fast.pxd  _hierarchical_fast.pyx  _inertia.c  _inertia.pyx  _k_means.c  _k_means.pxd  _k_means.py  _k_means.pyx  _k_means_common.pxd  _k_means_common.pyx  _k_means_elkan.c  _k_means_elkan.pyx  _k_means_fast.pxd  (+47 more)
sklearn/cluster_clement/: _k_means_elkan.pyx  affinity_propagation_.py
sklearn/compose/: 32713.fix.rst  __init__.py  _column_transformer.py  _resampled.py  _target.py
sklearn/covariance/: __init__.py  _elliptic_envelope.py  _empirical_covariance.py  _graph_lasso.py  _graph_lasso_.py  _robust_covariance.py  _shrunk_covariance.py  _shrunk_covariance_.py  elliptic_envelope.py  empirical_covariance_.py  g_lasso.py  g_lasso_.py  graph_lasso_.py  graphical_lasso_.py  outlier_detection.py  robust_covariance.py  shrunk_covariance_.py
sklearn/cross_decomposition/: __init__.py  _cca.py  _cca_.py  _pls.py  _pls_.py  cca_.py  kernel_cca.py  pls_.py  test_maria.py
sklearn/datasets/: #base.py#  DATASET_PROPOSAL.txt  GitHubDatasets.py  RDatasets  RDatasets.py  __init__.py  _arff_parser.py  _base.py  _california_housing.py  _covtype.py  _kddcup99.py  _lfw.py  _olivetti_faces.py  _openml.py  _rcv1.py  _samples_generator.py  _species_distributions.py  _svmlight_format.c  _svmlight_format.py  _svmlight_format.pyx  _svmlight_format_fast.pyx  _svmlight_format_io.py  _svmlight_format_pypy.py  _twenty_newsgroups.py  adult_census.py  base.py  cache.py  cal_housing.py  california_housing.py  covtype.py  http.py  kddcup99.py  landsat.py  lfw.py  make_nudged_dataset.py  meson.build  microarray.py  mlcomp.py  mldata.py  movielens.py  (+11 more)
sklearn/decomposition/: __init__.py  _base.py  _cdnmf_fast.pyx  _dict_learning.py  _factor_analysis.py  _fastica.py  _gdnmf.py  _incremental_pca.py  _kernel_pca.py  _lda.py  _mdnmf.py  _mf.c  _mf.pyx  (+48 more)
(+10437 files in other folders)
